--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h1>Task List</h1>
         <label for="tag">nome</label>
         <input id="tag" type="text" required />
-        <button>INVIA</button>
-        <button>elimina</button>
+        <div><button>INVIA</button></div>
+        <div><button type="button">elimina</button></div>
       </form>
     </main>
     <footer></footer>
